# ariadne-agentic-rag

./: .gitignore  LICENSE  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: el-GR.json
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_ai_hallucination.md  3_feature_request.md
.jules/: sentinel.md
data/courses/: αλγ-πολ.md  ανα-εξο-πλη.md  αντ-προ.md  αρι-ανα.md  αρχ-τηλ-συσ.md  αρχ-υπο-1.md  αρχ-υπο-2.md  αστ-δικ-κορ.md  ασυ-ζευ.md  ασυ-κιν-επι-1.md  ασυ-κιν-επι-2.md  ασφ-συσ.md  αυτ-πρα.md  βασ-δεδ.md  γνω-ψυχ.md  γρα-υπο.md  δια-ανθ-υπο.md  δια-μαθ.md  δια-μεγ-δεδ.md  δια-πρα.md  διδ-πλη.md  δικ-αισ.md  δικ-επι-1.md  δικ-επι-2.md  δομ-δεδ.md  δορ-επι.md  ειδ-θεμ-αλγ.md  εισ-δημπλη.md  εισ-ενσ-συσ.md  εισ-οικ-επι.md  εισ-οπτ-επι.md  εισ-πλη-τηλ.md  εισ-ραν.md  εκπ-περ.md  εκπ-πλη.md  επε-εικ.md  επε-ομι.md  επε-σημ-πολ.md  επε-φυσ-γλω.md  επι-πλη.md  (+71 more)
data/md_general/: dit-course-guide.md  dit-thesis-guide.md
data/schedule_data/: dit_program_spring_2025-26_v2_2.jsonl
data/website_data/: dit_announcements.jsonl  dit_website_enriched.jsonl
eval/: evaluate.py
pipelines/: ingestion.py
pipelines/core/: logger.py
pipelines/extractors/: parse_schedule.py  pdf_parser.py  split_courses.py
pipelines/loaders/: qdrant_loader.py
pipelines/processors/: course_metadata_enrichment.py  website_metadata_enrich.py
pipelines/schemas/: documents.py
pipelines/scrapers/: announcements_scraper.py  sitemap_scraper.py
public/: style.css
tests/: test_qdrant_loader.py  test_schemas.py  test_scrapers.py
(+15 files in other folders)
